@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/RAxML.R, R/ape.R, R/codeml_mlc.R, R/hyphy.R, R/method-show.R, R/paml_rst.R, R/phangorn.R, R/r8s.R
+% Please edit documentation in R/RAxML.R, R/ape.R, R/hyphy.R, R/method-show.R, R/phangorn.R
 \docType{methods}
 \name{show,raxml-method}
 \alias{show}
@@ -20,13 +20,13 @@
 
 \S4method{show}{apeBootstrap}(object)
 
-\S4method{show}{codeml_mlc}(object)
-
 \S4method{show}{hyphy}(object)
 
 \S4method{show}{beast}(object)
 
 \S4method{show}{codeml}(object)
+
+\S4method{show}{codeml_mlc}(object)
 
 show(object)
 
@@ -36,9 +36,9 @@ show(object)
 
 \S4method{show}{paml_rst}(object)
 
-\S4method{show}{phangorn}(object)
-
 \S4method{show}{r8s}(object)
+
+\S4method{show}{phangorn}(object)
 }
 \arguments{
 \item{object}{one of \code{jplace}, \code{beast} object}
