@@ -2,6 +2,8 @@ CHANGES IN VERSION 1.3.16
 ------------------------
  o update fortify.phylo to work with phylo that has missing value of edge length <2016-04-21, Thu>
    + https://github.com/GuangchuangYu/ggtree/issues/54
+ o support passing textConnection(text_string) as a file <2016-04-21, Thu>
+   + https://github.com/GuangchuangYu/ggtree/pull/55#issuecomment-212859693
  
 CHANGES IN VERSION 1.3.15
 ------------------------
